--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "arcgis-to-geojson-utils": "^1.0.1",
     "async": "~0.9.0",
-    "aws-sdk": "~2.1.20",
+    "aws-sdk": "^2.2.43",
     "body-parser": "~1.12.3",
     "config": "~1.12.0",
     "connect-multiparty": "^1.2.5",
@@ -31,7 +31,6 @@
     "mkdirp": "~0.5.0",
     "moment": "^2.11.2",
     "mv": "~2.0.3",
-    "node-fs": "~0.1.7",
     "request": "~2.54.0",
     "rimraf": "^2.3.2",
     "spatialreference": "^1.0.1",
