--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.5.1",
     "ngeohash": "^0.6.0",
     "terraformer": "^1.0.5",
+    "terraformer-arcgis-parser": "^1.0.4",
     "turf-centroid": "^1.1.3"
   },
   "devDependencies": {
