--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.3.3",
     "esri-extent": "^1.1.0",
     "express": "^4.12.3",
+    "koop-featureserver-plugin": "^1.0.0",
     "format-spatial-ref": "^1.0.0",
     "fs-extra": "^0.26.2",
     "gunzip-maybe": "^1.3.1",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "babel-cli": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
+    "buble": "^0.15.2",
     "gh-release": "^1.1.6",
     "mocha": "^2.2.1",
     "nock": "^2.12.0",
@@ -61,14 +63,14 @@
     "spatial"
   ],
   "license": "Apache-2.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/koopjs/koop.git"
   },
   "scripts": {
     "release": "gh-release",
-    "compile": "babel src --out-dir . && cp -r src/lib/templates/ lib/templates",
+    "compile": "buble -i src -o dist",
     "test": "standard src && mocha test/models/ -t 20000"
   }
 }
