--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "body-parser": "~1.12.3",
     "config": "~1.12.0",
     "connect-multiparty": "^1.2.5",
+    "cors": "^2.8.1",
     "ejs": "^2.3.3",
     "esri-extent": "^1.1.0",
     "express": "^4.12.3",
-    "koop-featureserver-plugin": "^1.0.0",
     "format-spatial-ref": "^1.0.0",
     "fs-extra": "^0.26.2",
     "gunzip-maybe": "^1.3.1",
     "highland": "^3.0.0-beta.1",
+    "koop-featureserver-plugin": "^1.0.0",
     "koop-logger": "^1.0.1",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
