--- a/package.json
+++ b/package.json
@@ -13,44 +13,23 @@
     "Nate Goldman <nate@ngoldman.me>"
   ],
   "dependencies": {
-    "async": "~0.9.0",
-    "aws-sdk": "^2.2.43",
-    "body-parser": "~1.12.3",
-    "config": "~1.12.0",
-    "connect-multiparty": "^1.2.5",
+    "body-parser": "^1.16.0",
+    "config": "^1.24.0",
     "cors": "^2.8.1",
     "ejs": "^2.3.3",
-    "esri-extent": "^1.1.0",
-    "express": "^4.12.3",
-    "format-spatial-ref": "^1.0.0",
-    "fs-extra": "^0.26.2",
-    "gunzip-maybe": "^1.3.1",
-    "highland": "^3.0.0-beta.1",
+    "express": "^4.14.1",
     "koop-featureserver-plugin": "^1.0.0",
+    "koop-localfs": "^1.1.1",
     "koop-logger": "^1.0.1",
-    "lodash": "~3.6.0",
-    "mkdirp": "~0.5.0",
-    "moment": "^2.11.2",
-    "mv": "~2.0.3",
-    "request": "~2.54.0",
-    "rimraf": "^2.3.2",
-    "spatialreference": "^1.0.1",
-    "sphericalmercator": "~1.0.3",
-    "sql-parser": "~0.5.0",
-    "terraformer": "1.0.5",
-    "terraformer-arcgis-parser": "1.0.4",
-    "terraformer-wkt-parser": "~1.0.0"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
     "buble": "^0.15.2",
-    "gh-release": "^1.1.6",
-    "mocha": "^2.2.1",
-    "nock": "^2.12.0",
-    "should": "~5.2.0",
+    "gh-release": "^2.2.0",
+    "mocha": "^3.2.0",
+    "should": "^11.2.0",
     "sinon": "^1.17.1",
-    "standard": "^5.3.1"
+    "standard": "^8.6.0"
   },
   "homepage": "https://github.com/koopjs/koop",
   "keywords": [
