--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -1,7 +1,7 @@
 {
   "name": "winnow",
-  "version": "1.2.1",
-  "description": "Apply sql-like filters to streams of GeoJSON",
+  "version": "1.2.2",
+  "description": "Apply sql-like filters to GeoJSON",
   "main": "dist/index.js",
   "directories": {
     "test": "test"
