--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koop",
   "description": "Transform, query, & download geospatial data on the web",
-  "version": "3.0.0-alpha.29",
+  "version": "3.0.0",
   "author": {
     "name": "Chris Helm"
   },
