--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.1",
     "ejs": "^2.3.3",
     "express": "^4.14.1",
-    "koop-cache-memory": "^1.0.1",
+    "koop-cache-memory": "^1.0.2",
     "koop-featureserver-plugin": "^1.0.0",
     "koop-localfs": "^1.1.1",
     "koop-logger": "^1.0.1",
@@ -30,7 +30,8 @@
     "mocha": "^3.2.0",
     "should": "^11.2.0",
     "sinon": "^1.17.1",
-    "standard": "^8.6.0"
+    "standard": "^8.6.0",
+    "supertest": "^3.0.0"
   },
   "homepage": "https://github.com/koopjs/koop",
   "keywords": [
@@ -52,6 +53,16 @@
   "scripts": {
     "release": "gh-release",
     "compile": "buble -i src -o dist",
-    "test": "NODE_ENV=test standard src && mocha test/index.js -t 20000"
+    "test": "NODE_ENV=test standard src && mocha test/*.js -t 5000"
+  },
+  "standard": {
+    "globals": [
+      "describe",
+      "it",
+      "before",
+      "after",
+      "beforeEach",
+      "afterEach"
+    ]
   }
 }
