--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/dmfenton/winnow#readme",
   "dependencies": {
+    "@turf/bbox-polygon": "^3.10.3",
     "@turf/centroid": "^3.7.5",
     "alasql": "^0.3.6",
     "highland": "^3.0.0-beta.3",
