--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -35,6 +35,7 @@
     "alasql": "^0.4.0",
     "highland": "^3.0.0-beta.3",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "ngeohash": "^0.6.0",
     "proj4": "^2.3.17",
     "terraformer": "^1.0.7"
