--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -15,14 +15,16 @@
   "author": "Daniel Fenton <dfenton@esri.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "chroma-js": "^1.3.4",
+    "classybrew": "0.0.3",
     "esri-extent": "^1.1.1",
     "lodash": "^4.12.0",
     "moment": "^2.13.0",
     "terraformer-arcgis-parser": "^1.0.4",
-    "winnow": "^1.10.1"
+    "winnow": "^1.10.7"
   },
   "devDependencies": {
-    "async": "^2.1.4",
+    "async": "^2.5.0",
     "buble": "^0.15.1",
     "express": "^4.14.0",
     "mocha": "^3.4.2",
