--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.18.1",
     "ngeohash": "^0.6.0",
     "proj4": "^2.3.17",
+    "simple-statistics": "^4.1.1",
     "terraformer": "^1.0.7"
   },
   "devDependencies": {
