--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -10,6 +10,7 @@
     "test": "tape '**/*.spec.js' | tap-spec",
     "test:cov": "nyc -r=json-summary tape '**/*.spec.js' | tap-spec && npm run cov:badge && npm run test:cov:unit",
     "test:cov:unit": "nyc -r=json-summary --report-dir=coverage_unit --temp-dir=.nyc_output_unit tape 'src/**/*.spec.js' | tap-spec && npm run cov:badge:unit",
+    "test:cov:unit:loc": "nyc -r=html --report-dir=coverage_unit --temp-dir=.nyc_output_unit tape 'src/**/*.spec.js' | tap-spec && npm run cov:badge:unit",
     "cov:badge": "coverage-badges-cli --output ./coverage.svg",
     "cov:badge:unit": "coverage-badges-cli --source coverage_unit/coverage-summary.json --output ./coverage-unit.svg",
     "benchmark": "node benchmark/index.js",
@@ -47,7 +48,7 @@
   },
   "homepage": "https://github.com/koopjs/koop#readme",
   "dependencies": {
-    "@esri/proj-codes": "^3.0.0",
+    "@esri/proj-codes": "^3.1.0",
     "@terraformer/arcgis": "^2.1.1",
     "@terraformer/spatial": "^2.1.2",
     "@turf/bbox-polygon": "^6.0.1",
@@ -56,10 +57,10 @@
     "alasql": "^3.0.0",
     "classybrew": "0.0.3",
     "joi": "^17.6.3",
+    "js-sql-parser": "^1.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "ngeohash": "^0.6.3",
-    "pgsql-ast-parser": "^11.0.1",
     "proj4": "^2.9.0",
     "simple-statistics": "^7.0.0",
     "string-hash": "^1.1.3",
