--- a/packages/output-geoservices/package.json
+++ b/packages/output-geoservices/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "test:cov": "nyc -r=json-summary jest && npm run cov:badge",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg"
+    "test:cov": "jest --coverage && npm run cov:badge",
+    "cov:badge": "coverage-badges --output ./coverage.svg"
   },
   "repository": {
     "type": "git",
@@ -33,5 +33,15 @@
   "dependencies": {
     "@koopjs/featureserver": "7.1.7",
     "@koopjs/logger": "5.0.0"
+  },
+  "devDependencies": {
+    "jest-coverage-badges": "^1.1.2"
+  },
+  "jest": {
+    "coverageReporters": [
+      "json", 
+      "text",
+      "lcov"
+    ]
   }
 }
