--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "mocha": "^10.0.0",
+    "proxyquire": "^2.1.3",
     "should": "^13.2.3",
     "should-sinon": "0.0.6",
     "sinon": "^15.0.0",
