--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -38,6 +38,7 @@
     "wkt-parser": "^1.3.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
     "express": "^4.14.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
